--- a/FIRST.html
+++ b/FIRST.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <body>
-    <p align="center"> VADODARIYA BHAVYA</p>P> 
+    <p align="center"> VADODARIYA BHAVYA</p>
     <h1> bhavya</h1>
   </body
 </head>
